k8s/app3–deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: default
spec:
  selector:
    matchLabels:
      run: app3
  template:
    metadata:
      labels:
        run: app3
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: IfNotPresent
        name: app3
        ports:
        - containerPort: 8080
          protocol: TCP
