k8s/service3.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: app3
  type: NodePort
